Fixed alignment of close button

--- a/src/components/Popup/Popup.scss
+++ b/src/components/Popup/Popup.scss
@@ -6,4 +6,8 @@
     left: 50%;
     transform: translateX(-50%);
     background-color: aqua;
+
+    .header {
+        text-align: right;
+    }
 }
